* 2014-09-21 - thorben.betten@open-xchange.com

 - Fix for bug 34447: Fixed typo in error message
 - Fix for bug 34285: Handle possible "java.net.SocketTimeoutException" when executing an HTTP OAuth request

* 2014-09-20 - thorben.betten@open-xchange.com

 - Fix for bug 33434: Introduced composition space concept to track information and data associated with a mail compose

* 2014-09-19 - tobias.friedrich@open-xchange.com

 - Fix for bug 34499: Don't fail on invalid e-mail addresses, instead add a warning to the import result

* 2014-09-18 - marc.arens@open-xchange.com

 - Fix for bug 34002: Implement asynchronous thumbnail converter that fails fast if no cached thumbnail is found.

* 2014-09-18 - steffen.templin@open-xchange.com

 - Fix for bug 34495: Implemented more sophisticated parsing of SIEVE response errors

* 2014-09-18 - steffen.templin@open-xchange.com

 - Fix for bug 34470: Use the client-provided time zone for conversion of mail dates

* 2014-09-18 - jan.bauerdick@open-xchange.com

 - Fix for bug 34507: Added user-friendly error message

* 2014-09-17 - marcus.klein@open-xchange.com

 - Fix for bug 34467: Documented LoginHandlerService.handleLogout() method in more detail when it is called and for what it can be used.

* 2014-09-16 - tobias.friedrich@open-xchange.com

 - Fix for bug 34448: Check presence of Hazelcast Toolkit MBean before querying map statistics

* 2014-09-15 - tobias.friedrich@open-xchange.com

 - Fix for bug 34433: Do not depend on background update tasks

* 2014-09-14 - tobias.friedrich@open-xchange.com

 - Fix for bug 34396: Added proper exception messages for password change service
 - Fix for bug 34394: Fixed escaping in example patterns for com.openexchange.passwordchange.allowedPattern

* 2014-09-12 - thorben.betten@open-xchange.com

 - Fix for bug 26090: Check URIs' protocols/schemes against a white-list filter and discard/deny the ones not contained

* 2014-09-11 - jan.bauerdick@open-xchange.com
