@@ -20,6 +20,7 @@ Import-Package: com.openexchange.ajax.container,
  com.openexchange.log,
  com.openexchange.oauth,
  com.openexchange.osgi,
+ com.openexchange.secret,
  com.openexchange.server,
  com.openexchange.session,
  com.openexchange.sessiond,
