@@ -1,3 +1,7 @@
+* 2014-09-22 - ioannis.chouklis@open-xchange.com
+
+ - Fix for bug 34551: Correctly remove the XING subscriptions when the OAuth account is removed 
+
 * 2014-09-21 - thorben.betten@open-xchange.com
 
  - Fix for bug 34447: Fixed typo in error message
